--- a/acquire.ipynb
+++ b/acquire.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
        "<Response [200]>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
        " <a class=\"more-link\" href=\"https://codeup.com/codeup-news/c-suite-award-stephen-noteboom/\">read more</a>]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
        "'https://codeup.com/codeup-news/dei-report/'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
        " 'https://codeup.com/codeup-news/c-suite-award-stephen-noteboom/']"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +203,7 @@
        "'Diversity Equity and Inclusion Report'"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
        "'Codeup is excited to launch our first Diversity Equity, and Inclusion (DEI) report! In over eight years as an organization, we’ve implemented policies and grown our DEI efforts. We are extremely proud of the progress we’ve made as a staff and Codeup community, and we recognize there is more to learn. This report captures some of the ways that we’ve lived our value of Cultivating Inclusive Growth, and how we will continue doing so as we look to the future.\\nWe wanted to shine a light on the demographics of our students and staff, and in particular how that compares to the tech industry as a whole. How we collect, organize, and share employee demographic data is informed by standards set by the Equal Employment Opportunity Commission (EEOC).\\nWe are proud to celebrate how we’ve grown and are motivated and committed to do more and be better. To view the report visit the link here, or download it below.'"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +323,7 @@
        "'india'"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +350,7 @@
        "'https://inshorts.com/en/read/india'"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +372,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['india',\n",
+       " 'business',\n",
+       " 'sports',\n",
+       " 'world',\n",
+       " 'politics',\n",
+       " 'technology',\n",
+       " 'startup',\n",
+       " 'entertainment',\n",
+       " 'miscellaneous',\n",
+       " 'hatke',\n",
+       " 'science',\n",
+       " 'automobile']"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_cats(url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,35 +412,238 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cat_soup = soupify"
+    "cat_soup = soupify(get(cat_url).content)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'New species of beetle named after Novak Djokovic'"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cat_soup.find_all('span', itemprop='headline')[0].text\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_all_shorts(base_url):\n",
     "    cats = get_cats(base_url)\n",
+    "    all_articles = []\n",
     "    for cat in cats:\n",
     "        cat_url = base_url + '/' + cat\n",
     "        cat_soup = soupify(get(cat_url).content)\n",
-    "        cat_titles = [title.text for title in cat_soup.find_all('span', )]\n",
-    "        cat_bodies = []"
+    "        cat_titles = [title.text for title in cat_soup\n",
+    "                    .find_all('span', itemprop='headline')]\n",
+    "        cat_bodies = [body.text for body in cat_soup\n",
+    "                    .find_all('div', itemprop='articleBody')]\n",
+    "        cat_articles = [{'title': title, \n",
+    "                        'category': cat,\n",
+    "                        'body': body} for title, body in zip(\n",
+    "                            cat_titles, cat_bodies\n",
+    "                        )]\n",
+    "        print(len(cat_articles))\n",
+    "        all_articles.extend(cat_articles)\n",
+    "\n",
+    "    return all_articles"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n",
+      "25\n",
+      "25\n",
+      "25\n",
+      "25\n",
+      "24\n",
+      "25\n",
+      "25\n",
+      "24\n",
+      "25\n",
+      "25\n",
+      "24\n"
+     ]
+    }
+   ],
+   "source": [
+    "all_articles = get_all_shorts(url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "get_all_shorts(url)"
+    "all_articles = pd.DataFrame(all_articles)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>category</th>\n",
+       "      <th>body</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Oldest woman in India passes away</td>\n",
+       "      <td>india</td>\n",
+       "      <td>Kunjannam, a 112-yr-old woman from Parannur (K...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Zimbabwe players ask India for cricketing tips</td>\n",
+       "      <td>india</td>\n",
+       "      <td>After getting thrashed by India by 5-0 in the ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Samsung launches Galaxy Star 2 Plus at Rs.7,335</td>\n",
+       "      <td>india</td>\n",
+       "      <td>Samsung has unveiled the Galaxy start 2 Plus s...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Indian Navy gets VLF, easy communication with ...</td>\n",
+       "      <td>india</td>\n",
+       "      <td>The Indian navy has a new communication system...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>India beat NZ 3-2 to enter CWG hockey finals</td>\n",
+       "      <td>india</td>\n",
+       "      <td>In the CWG men's hockey semi-final against New...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>279</th>\n",
+       "      <td>Increased repo rate big dampener for us: Autom...</td>\n",
+       "      <td>automobile</td>\n",
+       "      <td>Federation of Automobile Dealers Associations ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>280</th>\n",
+       "      <td>China's Geely buys 7.6% stake in Aston Martin</td>\n",
+       "      <td>automobile</td>\n",
+       "      <td>China-based Zhejiang Geely announced on Friday...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>281</th>\n",
+       "      <td>TVS Motor beats Hero MotoCorp to become 6th mo...</td>\n",
+       "      <td>automobile</td>\n",
+       "      <td>TVS Motor Company Limited has become the sixth...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>282</th>\n",
+       "      <td>Record 5.4 lakh vehicles sold during Navratri ...</td>\n",
+       "      <td>automobile</td>\n",
+       "      <td>Federation of Automobile Dealers Associations ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>283</th>\n",
+       "      <td>Porsche becomes Europe's most valuable automak...</td>\n",
+       "      <td>automobile</td>\n",
+       "      <td>Porsche overtook parent company Volkswagen to ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>284 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                 title    category  \\\n",
+       "0                    Oldest woman in India passes away       india   \n",
+       "1       Zimbabwe players ask India for cricketing tips       india   \n",
+       "2      Samsung launches Galaxy Star 2 Plus at Rs.7,335       india   \n",
+       "3    Indian Navy gets VLF, easy communication with ...       india   \n",
+       "4         India beat NZ 3-2 to enter CWG hockey finals       india   \n",
+       "..                                                 ...         ...   \n",
+       "279  Increased repo rate big dampener for us: Autom...  automobile   \n",
+       "280      China's Geely buys 7.6% stake in Aston Martin  automobile   \n",
+       "281  TVS Motor beats Hero MotoCorp to become 6th mo...  automobile   \n",
+       "282  Record 5.4 lakh vehicles sold during Navratri ...  automobile   \n",
+       "283  Porsche becomes Europe's most valuable automak...  automobile   \n",
+       "\n",
+       "                                                  body  \n",
+       "0    Kunjannam, a 112-yr-old woman from Parannur (K...  \n",
+       "1    After getting thrashed by India by 5-0 in the ...  \n",
+       "2    Samsung has unveiled the Galaxy start 2 Plus s...  \n",
+       "3    The Indian navy has a new communication system...  \n",
+       "4    In the CWG men's hockey semi-final against New...  \n",
+       "..                                                 ...  \n",
+       "279  Federation of Automobile Dealers Associations ...  \n",
+       "280  China-based Zhejiang Geely announced on Friday...  \n",
+       "281  TVS Motor Company Limited has become the sixth...  \n",
+       "282  Federation of Automobile Dealers Associations ...  \n",
+       "283  Porsche overtook parent company Volkswagen to ...  \n",
+       "\n",
+       "[284 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_articles"
    ]
   }
  ],
